# Ship-Motion-Simulator

./: README.md
OpenGLScene/: CMakeLists.txt  main.cpp
OpenGLScene/DerivedData/ModuleCache/: Session.modulevalidation
OpenGLScene/DerivedData/OpenGLScene/: info.plist
OpenGLScene/DerivedData/OpenGLScene/Logs/Debug/: 04147F98-E4FB-4977-86F0-A0C802A2AC05.xcactivitylog  0BE335E7-A3B1-4F23-BF8D-004591223750.xcactivitylog  204A4A25-54B6-4B45-B664-A38CB4DF0FC2.xcactivitylog  234EF4D6-0371-478F-92A2-2240EAD03F66.xcactivitylog  3053B91C-6F0D-4E0A-ABA2-26DC7A1D471B.xcactivitylog  30FAA0E4-CE45-4A71-A118-D14FF8827616.xcactivitylog  35ED308A-37A6-47BB-BE47-D34ED6A82625.xcactivitylog  3CBA40D4-5BCC-4A82-82E4-2430A3FFA106.xcactivitylog  80B93525-D8A4-4820-A2C0-12549670C72D.xcactivitylog  83B5BEB6-8BDA-429A-A8A6-8688959A3938.xcactivitylog  880DA7C8-0479-46DF-AA5B-A149DEE72B64.xcactivitylog  8C9DFC11-4FDF-40CC-B3A7-10344D68D14B.xcactivitylog  8DFA7D51-5EBC-42F2-9C0C-DD765D31FFED.xcactivitylog  9E1FD41E-3F99-4381-A427-CE7E4E7FB5F4.xcactivitylog  A6139DE8-B0E4-4DE8-BC3B-285339053623.xcactivitylog  AB9CDF77-0E1D-4745-B9AE-330B41628CAB.xcactivitylog  (+5 more)
OpenGLScene/OpenGLScene/: Ground.cpp  Ground.hpp  LoadFunctions.cpp  LoadFunctions.hpp  Noise.cpp  Noise.hpp  RenderFunctions.h  RenderWindow.cpp  RenderWindow.hpp  Skybox.cpp  Skybox.hpp  controls.cpp  controls.hpp  main.cpp  main3NOTUSED.cpp  mainWorkingNOTUSED.cpp  shader-MacBook Pro.hpp  shader.cpp  shader.hpp  water.cpp  water.hpp
OpenGLScene/OpenGLScene.xcodeproj/: project.pbxproj
OpenGLScene/OpenGLScene.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenGLScene/OpenGLScene/shaders/: BoatFragmentShader.glsl  BoatVertexShader.glsl  FragmentShader.glsl  GroundFragmentShader.glsl  GroundVertexShader.glsl  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl  VertexShader.glsl  WaterFragmentShader.glsl  WaterVertexShader.glsl
(+13 files in other folders)
